--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Robb</title>
+    <title>Home</title>
   </head>
     <div>
       <h1>I am Robb!</h1>
+    </div>
+
+    <div>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about_me.html">About Me</a></li>
+      </ul>
     </div>
 
     <div>
