Really hoping Pia's google skills aren't awesome.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div>
       <p>I'm gonna tell you some of my favorite things!</p>
       <p>I'm happy you're here!</p>
+      <p>You guys remember ska?</p>
     </div>
 
     <hr>
