--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
     <title>Home</title>
   </head>
     <div>
@@ -17,7 +18,7 @@
       </ul>
     </div>
 
-    <div>
+    <div id="intro">
       <p>I'm gonna tell you some of my favorite things!</p>
       <p>I'm happy you're here!</p>
       <p>You guys remember ska?</p>
@@ -25,7 +26,7 @@
 
     <hr>
 
-    <div>
+    <div class="magenta-border">
       <h2>My favorite foods</h2>
       <p>Food is delicious!</p>
       <ol>
@@ -39,17 +40,16 @@
 
     <hr>
 
-    <div>
-
+    <div class="magenta-border">
+      <h2>My favorite animals</h2>
+      <ul>
+        <li>Biggie (Piggy) Smalls the Juliana MicroPig</li>
+        <li>Eagle</li>
+        <li>Cat</li>
+        <li>Dog</li>
+      </ul>
+      <a href="http://www.google.com/">Google</a>
     </div>
-    <h2>My favorite animals</h2>
-    <ul>
-      <li>Biggie (Piggy) Smalls the Juliana MicroPig</li>
-      <li>Eagle</li>
-      <li>Cat</li>
-      <li>Dog</li>
-    </ul>
-    <a href="http://www.google.com/">Google</a>
 
     <hr>
     <h2>My favorite places to visit</h2>
